# j3de

./: CMakeLists.txt  README.md
clax/: README
clax/docs/: clax.txt  license.txt
clax/examples/: test.c  test1.c  test2.c
clax/lib/: clax.lib
clax/src/: camera.c  clax.c  clax.h  claxi.h  file_3ds.c  file_clx.c  makebc.mak  makegcc.mak  makewc.mak  matrix.c  quatern.c  spline.c  vector.c
oldsrc/64k/: 64k.dsp  64k.dsw  64k.nfo  Clax.h  Main.cpp  Main.h  Winmain.cpp  camera.cpp  clax.cpp  claxi.h  fatmap.cpp  fatmap.h  file_3ds.cpp  light.cpp  light.h  matrix.cpp  meta.cpp  meta.h  print.h  quatern.cpp  render.cpp  render.h  spline.cpp  vector.cpp
oldsrc/64k/res/: 1.3ds  64k.manifest  64k.rc  resource.h
oldsrc/64k/tc/: tc.cpp  tc.dsp  tc.dsw
oldsrc/misc/: bump.h  font.h  greets.h  main.cpp  particle.h  poll.h  print.h  rad_blur.h  random.h  rgbvideo.h  rgbvideo_w32.h  system.h  system_w32.h  voxels.h
res/: 01-2ndreal.3DS  05-torus-box.3ds
src/: loadjpeg.h  main.cpp  meta.h
